--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
   <link rel="icon" type="image/x-icon" href="assets/images/gold.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XY5GVZH8X7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XY5GVZH8X7');
+  </script>
 </head>
 
 <body class="mat-typography">
