Google audit improvements

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,17 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PSN Trophy Case</title>
+  <title>PSN Platinum Mosaic</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Description" content="View your PlayStation platinum trophies as mosaic.">
-  <link rel="icon" type="image/x-icon" href="assets/images/gold.png">
+  <meta name="Description" content="Generate a mosaic of your PlayStation platinum trophies.">
+  <link rel="icon" type="image/x-icon" href="assets/images/platinum.png">
+  <link rel="apple-touch-icon" href="assets/images/platinum.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script data-ad-client="ca-pub-8962466520038767" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- <script data-ad-client="ca-pub-8962466520038767" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XY5GVZH8X7"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
