--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="Description" content="Generate a mosaic of your PlayStation platinum trophies.">
   <link rel="icon" type="image/x-icon" href="assets/images/platinum.png">
-  <link rel="apple-touch-icon" href="assets/images/platinum.png">
+  <link rel="apple-touch-icon" href="assets/icons/512.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
