--- a/src/index.html
+++ b/src/index.html
@@ -1,34 +1,34 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>PSN Platinum Mosaic</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="Description" content="Generate a mosaic of your PlayStation platinum trophies.">
-  <link rel="icon" type="image/x-icon" href="assets/images/platinum.png">
-  <link rel="apple-touch-icon" href="assets/icons/512.png">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script data-ad-client="ca-pub-8962466520038767" async
+  <head>
+    <meta charset="utf-8" />
+    <title>PSN Platinum Mosaic</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="Description" content="Generate a mosaic of your PlayStation platinum trophies." />
+    <link rel="icon" type="image/x-icon" href="assets/images/platinum.png" />
+    <link rel="apple-touch-icon" href="assets/icons/512.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- <script data-ad-client="ca-pub-8962466520038767" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
-  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XY5GVZH8X7"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
+    <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-XY5GVZH8X7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-    gtag('config', 'G-XY5GVZH8X7');
-  </script>
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-</head>
+      gtag('config', 'G-XY5GVZH8X7');
+    </script>
+    <link rel="manifest" href="manifest.webmanifest" />
+    <meta name="theme-color" content="#1976d2" />
+  </head>
 
-<body class="mat-typography">
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-</body>
-
+  <body class="mat-typography">
+    <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+  </body>
 </html>
